--- a/index.html
+++ b/index.html
@@ -64,3 +64,6 @@ function saveAsPDF() {
     win.print();
 }
 </script>
+  <footer>
+    &copy; 2017–2025 MaxNT Official, All rights reserved.
+  </footer>
