--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@ function saveAsPDF() {
     win.print();
 }
 </script>
-  <footer>
-    &copy; 2017–2025 MaxNT Official, All rights reserved.
-  </footer>
+   <footer>
+        <p>
+            © 2017-2025 | MaxNT Official © All rights reserved.
+        </p>
+    </footer>
